<resources>
    <string name="app_name">Kenguru Express</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cngAddressContact">Contact information</string>
    <string name="cngAddressCity">Enter city name</string>
    <string name="cngAddressStreet">Enter street name</string>
    <string name="cngAddressHome">Введите номер дома</string>
    <string name="cngAddressFlat">Enter house number</string>
    <string name="cngAddressIndex">Enter zip code</string>
    <string name="cngAddressSurname">Enter your last name</string>
    <string name="cngAddressName">Enter your name</string>
    <string name="cngAddressPatronimyc">Enter patronymic</string>
    <string name="cngAddressCompany">Enter your company name</string>
    <string name="cngAddressPhone">Enter phone</string>
    <string name="cngAddressDopPhone">Enter additional phone number</string>
    <string name="cngAddressComment">Enter your comment</string>
    <string name="agreeBtn">Apply</string>
    <string name="returnBtn">Back</string>
    <string name="showAddressInf">Addresses</string>
    <string name="showAddressEmptyBook">Your address book is empty</string>
    <string name="changeData">Data editing</string>
    <string name="agreePhone">Confirm number</string>
    <string name="cancelBtn">Cancel</string>
    <string name="acceptEmail">Confirm Email</string>
    <string name="enterTitle">Entry</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="enterBtn">Login</string>
    <string name="registerBtn">Registration</string>
    <string name="forgetPassword">Forgot your password?</string>
    <string name="resendEmail">Re-send Email letter</string>
    <string name="registerTitle">Registration</string>
    <string name="registerUserBtn">Register</string>
    <string name="nightThemeBtn">Enable night theme</string>
    <string name="settingsTitle">SETTINGS</string>
    <string name="changeThemeTitle">Change theme</string>
    <string name="tarrifsShowTitle">Tarrifs</string>
    <string name="cargoHeight">Enter cargo height</string>
    <string name="cargoWidth">Enter cargo width</string>
    <string name="cargoWeight">Enter cargo weight</string>
    <string name="cargoLength">Enter cargo length</string>
    <string name="enterBtnDialog">Input</string>
    <string name="trackNumHint">Enter track number</string>
    <string name="myDispatch">My shipments</string>
    <string name="docWeight">Enter the weight of the documents</string>
    <string name="cityDispatchHint">Enter the city of departure</string>
    <string name="fromDoorToWarehouse">From door to warehouse</string>
    <string name="fromWarehouseToDoor">From warehouse to door</string>
    <string name="calculateBtn">Calculate</string>
    <string name="similarGoodsHint">Number of similar goods</string>
    <string name="receivingCityHint">Enter the city of receipt</string>
    <string name="changeDataBtn">Data editing</string>
    <string name="editAddressBtn">Show My Addresses</string>
    <string name="settingsBtn">Settings</string>
    <string name="clickToChangeItemAddr">Click to change information</string>
    <string name="buyFor">Order for</string>
    <string name="lkTitle">Personal Area</string>
    <string name="enterCodeFromSms">Enter the code from SMS</string>
    <string name="countDispatchTitle">Cost of Delivery</string>
    <string name="dispatchBar">Delivery</string>
    <string name="receiveBar">My shipments</string>
    <string name="lkBar">Personal Area</string>
    <string name="trafficCompanyName">Company name</string>
    <string name="trafficCompanyReit">Rating</string>
    <string name="deliverTime">Delivery time</string>
    <string name="lkExitBtn">Sign out</string>
    <string name="AddressBookSender">Sender in the Address Book</string>
    <string name="infoAboutReceiver">Recipient information</string>
    <string name="receiverInAddressBook">Recipient in the Address Book</string>
    <string name="emptyTariffs">No offers from transport companiesE</string>
    <string name="waitingPlease">Wait</string>
    <string name="infSender">Sender information</string>
    <string name="dispatch_book_is_empty">Dispatch book is empty</string>
    <string name="rememberMe">Remember me</string>
    <string name="full_name">Full name</string>
    <string name="textPhone">Phone</string>
    <string name="EnableLightTheme">Включить светлую тему</string>
    <string-array name="shipmentNames">
        <item>Cargo</item>
        <item>Documents</item>
    </string-array>
</resources>