<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PurseFragment">

    <!-- TODO: Update blank fragment layout -->


    <AutoCompleteTextView
        android:id="@+id/cityDispatchCompleteTextView"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:hint="@string/cityDispatchHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textToDoor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="40dp"
        android:text="@string/fromDoorToWarehouse"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textToDoor" />

    <Switch
        android:id="@+id/switchToDoor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/textToDoor2"
        app:layout_constraintTop_toBottomOf="@+id/switchToDoor"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchToDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toEndOf="@+id/textToDoor"
        app:layout_constraintTop_toBottomOf="@+id/cityReceivingCompleteTextView"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textToDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="44dp"
        android:text="@string/fromWarehouseToDoor"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityReceivingCompleteTextView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="237dp"
        android:layout_height="25dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="30dp"
        android:entries="@array/shipmentNames"
        app:layout_constraintBottom_toTopOf="@+id/similarGoodsAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textToDoor2" />

    <Button
        android:id="@+id/countBtn"
        android:layout_width="187dp"
        android:layout_height="41dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="138dp"
        android:text="@string/calculateBtn"
        app:backgroundTint="@color/material_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/similarGoodsAdd"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/similarGoodsAdd"
        android:layout_width="234dp"
        android:layout_height="37dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/similarGoodsHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/countBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <AutoCompleteTextView
        android:id="@+id/cityReceivingCompleteTextView"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:hint="@string/receivingCityHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityDispatchCompleteTextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginBottom="62dp"
        android:background="@color/material_blue"
        app:layout_constraintBottom_toTopOf="@+id/cityDispatchCompleteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countDispatchTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>